Fixed layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -24,18 +24,12 @@ a:hover {
 
 html,
 body {
-  height: 100%;
   margin: 0;
   padding: 0;
 }
 
-body {
-  min-height: 100vh;
-}
-
 #root {
   width: 100%;
-  height: 100%;
 }
 
 h1 {
